--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.app</string>
+	<string>com.karam.alTarqeaFinance</string>
 	<key>PROJECT_ID</key>
 	<string>al-tarqea-finance</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:957710477110:ios:5f3c33ab5ca273cfedb597</string>
+	<string>1:957710477110:ios:f152538a533108a4edb597</string>
 </dict>
 </plist>
